# omu

./: Cargo.toml  README.md
docs/: cli.md
src/: audio.rs  commands.rs  convert.rs  image.rs  lib.rs  main.rs  utils.rs  video.rs
tests/: e2e_cli_tests.rs  unit_audio_tests.rs  unit_convert_tests.rs  unit_image_tests.rs  unit_video_tests.rs
