[package]
name = "omu"
version = "0.1.0"
edition = "2021"
description = "Open Media Utils - CLI for efficient multimedia file processing"
repository = "https://github.com/sammwy/omu"
authors = ["sammwy"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
image = "0.25.5"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.17.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
